# rose-offline-client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  lints.yml
src/: bevy_flycam.rs  character_model.rs  effect_loader.rs  exe_resource_loader.rs  fly_camera.rs  follow_camera.rs  free_camera.rs  lib.rs  main.rs  material.rs  mesh_pipeline.rs  model_loader.rs  npc_model.rs  orbit_camera.rs  ray_from_screenspace.rs  static_mesh_material.rs  terrain_material.rs  vfs_asset_io.rs  water_mesh_material.rs  zmo_asset_loader.rs  zms_asset_loader.rs  zone_loader.rs
src/animation/: animation_state.rs  camera_animation.rs  mesh_animation.rs  mod.rs  skeletal_animation.rs  transform_animation.rs  zmo_asset_loader.rs
src/audio/: audio_source.rs  global_sound.rs  mod.rs  ogg.rs  spatial_sound.rs  streaming_sound.rs  wav.rs
src/bundles/: ability_values.rs  mod.rs
src/components/: active_motion.rs  bank.rs  character_model.rs  character_model_blink_timer.rs  clan.rs  clan_membership.rs  client_entity.rs  client_entity_name.rs  collision.rs  command.rs  cooldowns.rs  damage_digits.rs  dead.rs  debug_render.rs  debug_render_color.rs  dummy_bone_offset.rs  effect.rs  event_object.rs  facing_direction.rs  item_drop_model.rs  mod.rs  model.rs  model_height.rs  name_tag_entity.rs  night_time_effect.rs  npc_model.rs  particle_sequence.rs  party_info.rs  party_membership.rs  passive_recovery_time.rs  pending_damage_list.rs  pending_skill_effect_list.rs  personal_store.rs  player_character.rs  position.rs  projectile.rs  selected_target.rs  sound_category.rs  vehicle.rs  vehicle_model.rs  (+5 more)
src/events/: animation_frame_event.rs  bank_event.rs  character_select_event.rs  chatbox_event.rs  clan_dialog_event.rs  client_entity_event.rs  conversation_dialog_event.rs  debug_inspector_event.rs  game_connection_event.rs  hit_event.rs  login_event.rs  message_box_event.rs  mod.rs  move_destination_effect_event.rs  network_event.rs  npc_store_event.rs  number_input_dialog_event.rs  party_event.rs  personal_store_event.rs  picking_event.rs  player_character_event.rs  player_command_event.rs  quest_trigger_event.rs  spawn_effect_event.rs  spawn_projectile_event.rs  system_func_event.rs  use_item_event.rs  world_connection_event.rs  zone_event.rs
src/protocol/: game_client.rs  login_client.rs  mod.rs  world_client.rs
src/protocol/irose/: game_client.rs  login_client.rs  mod.rs  world_client.rs
src/render/: damage_digit_material.rs  damage_digit_pipeline.rs  damage_digit_render_data.rs  effect_mesh_material.rs  mod.rs  object_material.rs  particle_material.rs  particle_pipeline.rs  particle_render_data.rs  rgb_texture_loader.rs  sky_material.rs  static_mesh_material.rs  terrain_material.rs  texture_array.rs  trail_effect.rs  water_material.rs  water_mesh_material.rs  world_ui.rs  zone_lighting.rs
src/render/shaders/: damage_digit.wgsl  (+11 more)
src/resources/: account.rs  app_state.rs  character_list.rs  character_select_state.rs  client_entity_list.rs  current_zone.rs  damage_digits_spawner.rs  debug_bone_visualisation.rs  debug_inspector.rs  debug_render.rs  debug_render_config.rs  effect_list.rs  game_connection.rs  game_data.rs  hotkeys_config.rs  icons.rs  interface_config.rs  loaded_zone.rs  login_connection.rs  login_state.rs  mod.rs  name_tag_cache.rs  name_tag_settings.rs  network_thread.rs  render_configuration.rs  selected_target.rs  server_configuration.rs  server_list.rs  sound_cache.rs  sound_config.rs  sound_settings.rs  specular_texture.rs  state.rs  ui_resources.rs  virtual_filesystem.rs  world_connection.rs  world_rates.rs  world_time.rs  zone_time.rs
src/scripting/: lua_game_constants.rs  lua_game_functions.rs  lua_quest_functions.rs  mod.rs  quest.rs  quest_condition_functions.rs  quest_function_context.rs  quest_reward_functions.rs  script_function_context.rs  script_function_resources.rs
src/shaders/: mesh.wgsl  mesh_struct.wgsl  mesh_view_bind_group.wgsl  static_mesh_material.wgsl  terrain_material.wgsl  water_mesh_material.wgsl
src/systems/: ability_values_system.rs  animation_effect_system.rs  animation_sound_system.rs  animation_system.rs  auto_login_system.rs  background_music_system.rs  character_model_add_collider_system.rs  character_model_blink_system.rs  character_model_system.rs  character_select_system.rs  clan_system.rs  client_entity_event_system.rs  collision_system.rs  command_system.rs  conversation_dialog_system.rs  cooldown_system.rs  damage_digit_render_system.rs  debug_inspector_system.rs  debug_model_skeleton_system.rs  debug_render_collider_system.rs  debug_render_directional_light_system.rs  debug_render_polylines_system.rs  debug_render_skeleton_system.rs  debug_render_system.rs  diagnostics_ui_system.rs  directional_light_system.rs  effect_system.rs  facing_direction_system.rs  free_camera_system.rs  game_connection_system.rs  game_debug_ui_system.rs  game_mouse_input_system.rs  game_system.rs  game_ui_system.rs  hit_event_system.rs  item_drop_model_system.rs  load_zone_system.rs  login_connection_system.rs  login_system.rs  mod.rs  (+35 more)
src/ui/: chatbox_system.rs  dialog.rs  dialog_loader.rs  drag_and_drop_slot.rs  drag_and_drop_system.rs  inventory_system.rs  mod.rs  tooltips.rs  ui_bank_system.rs  ui_character_create_system.rs  ui_character_info_system.rs  ui_character_select_name_tag_system.rs  ui_character_select_system.rs  ui_chatbox_system.rs  ui_clan_system.rs  ui_create_clan.rs  ui_debug_camera_info_system.rs  ui_debug_client_entity_list_system.rs  ui_debug_command_viewer_system.rs  ui_debug_diagnostics_system.rs  ui_debug_dialog_list.rs  ui_debug_effect_list.rs  ui_debug_entity_inspector_system.rs  ui_debug_item_list_system.rs  ui_debug_npc_list_system.rs  ui_debug_physics.rs  ui_debug_render_system.rs  ui_debug_skill_list_system.rs  ui_debug_window_system.rs  ui_debug_zone_lighting_system.rs  ui_debug_zone_list_system.rs  ui_debug_zone_time_system.rs  ui_diagnostics_system.rs  ui_drag_and_drop_system.rs  ui_exit_system.rs  ui_game_menu_system.rs  ui_hotbar_system.rs  ui_inventory_system.rs  ui_item_drop_name_system.rs  ui_login_system.rs  (+19 more)
(+30 files in other folders)
