[package]
name = "rose-offline-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.4"
arrayvec = "0.7"
async-trait = "0.1"
bevy = { version = "0.10", default-features = false, features = ["dds", "tga", "bevy_asset", "bevy_core_pipeline", "bevy_winit", "bevy_render", "bevy_pbr"] }
bevy_egui = "0.20.2"
bevy-inspector-egui = "0.18"
bevy_polyline = "0.6.0"
bevy_rapier3d = "0.21"
bitflags = "1.2"
bytemuck = { version = "1.7.0", features = ["derive"] }
chrono = "0.4"
clap = "3.2"
cpal = "0.15"
crossbeam-channel = "0.5"
directories = "5.0"
dolly = "0.4.1"
egui = "0.21"
egui_extras = "0.21"
enum-map = { version = "2.0", features = ["serde"] }
hound = "3.4"
image = { version = "0.24", default-features = false, features = ["dds", "ico", "tga"] }
lazy_static = "1.4.0"
lewton = "0.10"
log = "0.4.14"
md5 = "0.7.0"
num-derive = "0.3"
num-traits = "0.2"
oddio = "0.6"
pelite = "0.10.0"
rand = "0.8"
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1.17", features = ["rt", "net", "sync", "macros", "io-util"] }
toml = "0.7.2"
quick-xml = { version = "0.26.0", features = ["serialize"] }
regex = "1"
rose-data = { git = "https://github.com/exjam/rose-offline", rev = "aec24949e6e1fd21c005dca0d664daa44b68b5fe" }
rose-data-irose = { git = "https://github.com/exjam/rose-offline", rev = "aec24949e6e1fd21c005dca0d664daa44b68b5fe" }
rose-file-readers = { git = "https://github.com/exjam/rose-offline", rev = "aec24949e6e1fd21c005dca0d664daa44b68b5fe" }
rose-game-common = { git = "https://github.com/exjam/rose-offline", rev = "aec24949e6e1fd21c005dca0d664daa44b68b5fe" }
rose-game-irose = { git = "https://github.com/exjam/rose-offline", rev = "aec24949e6e1fd21c005dca0d664daa44b68b5fe" }
rose-network-common = { git = "https://github.com/exjam/rose-offline", rev = "aec24949e6e1fd21c005dca0d664daa44b68b5fe" }
rose-network-irose = { git = "https://github.com/exjam/rose-offline", rev = "aec24949e6e1fd21c005dca0d664daa44b68b5fe" }

[patch.crates-io]
bevy = { git = "https://github.com/exjam/bevy", rev = "177857c24fe027004b34e8662acfd7c2b98941a7" }
bevy_egui = { git = "https://github.com/exjam/bevy_egui", rev = "6613843ee112f943e78987cc4ab1fbb72da8ba02" }
egui = { git = "https://github.com/exjam/egui", rev = "3ff66738341330d40e206269ce3540379b9ce1f5" }
oddio = { git = "https://github.com/exjam/oddio", rev = "3c20292903fe629d7eab08c1790db70b9fddac96" }
pelite = { git = "https://github.com/exjam/pelite", rev = "750b4aea126b1248b46e52cf2b9ad288d01e698c" }
# Thanks bevy-inspector-egui
bevy_app = { git = "https://github.com/exjam/bevy", rev = "177857c24fe027004b34e8662acfd7c2b98941a7" }
bevy_asset = { git = "https://github.com/exjam/bevy", rev = "177857c24fe027004b34e8662acfd7c2b98941a7" }
bevy_core = { git = "https://github.com/exjam/bevy", rev = "177857c24fe027004b34e8662acfd7c2b98941a7" }
bevy_ecs = { git = "https://github.com/exjam/bevy", rev = "177857c24fe027004b34e8662acfd7c2b98941a7" }
bevy_hierarchy = { git = "https://github.com/exjam/bevy", rev = "177857c24fe027004b34e8662acfd7c2b98941a7" }
bevy_log = { git = "https://github.com/exjam/bevy", rev = "177857c24fe027004b34e8662acfd7c2b98941a7" }
bevy_math = { git = "https://github.com/exjam/bevy", rev = "177857c24fe027004b34e8662acfd7c2b98941a7" }
bevy_reflect = { git = "https://github.com/exjam/bevy", rev = "177857c24fe027004b34e8662acfd7c2b98941a7" }
bevy_utils = { git = "https://github.com/exjam/bevy", rev = "177857c24fe027004b34e8662acfd7c2b98941a7" }
bevy_core_pipeline = { git = "https://github.com/exjam/bevy", rev = "177857c24fe027004b34e8662acfd7c2b98941a7" }
bevy_pbr = { git = "https://github.com/exjam/bevy", rev = "177857c24fe027004b34e8662acfd7c2b98941a7" }
bevy_render = { git = "https://github.com/exjam/bevy", rev = "177857c24fe027004b34e8662acfd7c2b98941a7" }

[profile.dev.package."*"]
opt-level = 3
